Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.


VERSION 2.3.2
  FEATURES:

  CHANGES:
    * Bumped libMTP dependency to version 1.0.0.
    * Improved response of current track and albums applet on data updates.
    * Use system date/time format for default name when saving user playlists.

  BUGFIXES:
    * Also use podcast channel image for downloaded episodes. (BR 229391)
    * Collection directories that were symlinks could end up storing the wrong
      absolute path, causing those files to be removed during incremental
      scans.
    * Fixed playlist tooltips not showing up, even when enabled in the playlist
      layout (BR 249086)
    * Fixed potential crashes related to Applet loading. (BR 246756)
    * Fixed possible crash in Labels Applet when playing new track. (BR 248538)
    * Fixed incorrect layout of applets on startup.
    * Fixed Collection Browser not properly updating after a full rescan,
      necessitating Amarok to be closed and reopened. Fixes various bugs. 
      (BR 172542)
    * Fixed cover found dialog closing when download failed or is cancelled.
    * Fixed failure when fetching cddb info for audio CDs in localized Amarok.
    * Fixed expanding items in collection browser by double-click, in
      double-click mode.
    * Fixed crash when adding new folders repeatedly in podcast/saved playlist
      browsers.
    * Fixed context menu actions acting on wrong indices in the playlist
      browser.
    * Fixed incorrect text about "rpath" argument to collection scanner.
      (BR 236076)
    * Fixed emission of MPRIS StatusChange signal when switching into or out
      of random mode.


VERSION 2.3.2-Beta 1
  FEATURES:
    * Podcasts can now be filtered on provider and grouped in folders. (BR 219519)
    * Amarok 1.4 Database Importer: added support for importing labels.
      Thanks to Matěj Laitl for the patch. (BR 218996)
    * Shortcuts: Added "Replay current track" shortcut. (BR 217081)